@@ -8,6 +8,8 @@
   - S5P PAL L2: fixed memory issue when reading aerosol_optical_depth_validity
     of AER_OT product.
 
+* Fixed missing documentation on weight factor handling in rebinning algorithm.
+
 * Updated embedded expat library to version 2.5.0.
 
 * Fixed issue where jpeg dll was missing from windows binary installer.
